--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=phyothethtun28@gmail.com
-spring.mail.password=mvqt xtfb bhem umhw
+spring.mail.password=your password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
