--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Car-Rental
 spring.datasource.url=jdbc:mysql://localhost:3306/cardb?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
-spring.datasource.password=phyothetHtun!2
+spring.datasource.password=your password
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8000
